--- a/src/AppointmentSystem.Api/appsettings.json
+++ b/src/AppointmentSystem.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=appointmentdb;Username=postgres;Password=YeniSifre123"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=appointmentdb;User Id=postgres;Password=Musa123;"
   }
 }
