user secret added and readme updated

--- a/src/AppointmentSystem.Api/appsettings.json
+++ b/src/AppointmentSystem.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=appointmentdb;User Id=postgres;Password=Musa123;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=appointmentdb;User Id=postgres;Password=YOUR_PASSWORD_HERE;"
   }
 }
